--- a/ptu5_autoservice/autoservice/static/autoservice/css/base.css
+++ b/ptu5_autoservice/autoservice/static/autoservice/css/base.css
@@ -16,6 +16,21 @@ header {
     background-color: #444;
 }
 
+header .container {
+    display: flex;
+    flex-direction: row;
+}
+
+.spacer {
+    flex-grow: 1;
+}
+
+header .container span {
+    align-self: center;
+    color: #ccc;
+    padding: 0.5rem;
+}
+
 header a {
     display: inline-block;
     color: #fec;
@@ -99,4 +114,15 @@ ul li:hover {
 
 .paginator form {
     display: inline-block;
+}
+
+
+table {
+    margin: 0.5rem 1rem;
+}
+
+.form-error {
+    /* border: 3pt solid rgb(255, 0, 0);
+    background-color: rgb(246, 242, 7); */
+    color: rgb(255, 0, 51) ;
 }
