--- a/ptu5_autoservice/autoservice/static/autoservice/css/base.css
+++ b/ptu5_autoservice/autoservice/static/autoservice/css/base.css
@@ -137,3 +137,35 @@ table {
     background-color: rgb(246, 242, 7); */
     color: rgb(255, 0, 51) ;
 }
+
+.table-grid {
+    display: grid;
+    padding: 0.5rem;
+}
+
+.my-order-table {
+    grid-template-columns: 3fr 1fr 1fr;
+}
+
+.table-grid-cell {
+    display: inline-block;
+    align-self: stretch;
+    justify-self: stretch;
+    background-color: #ccc;
+    padding: 0.5rem;
+}
+
+.center {
+    text-align: center;
+}
+
+.dark {
+    background-color: #333;
+    color: #fff;
+}
+
+.overdue {
+    background-color: #f99;
+    color: red;
+    font-weight: bold;
+}
