status in my order

--- a/ptu5_autoservice/autoservice/static/autoservice/css/base.css
+++ b/ptu5_autoservice/autoservice/static/autoservice/css/base.css
@@ -144,7 +144,7 @@ table {
 }
 
 .my-order-table {
-    grid-template-columns: 3fr 1fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr 1fr;
 }
 
 .table-grid-cell {
