--- a/ptu5_autoservice/autoservice/templates/autoservice/base.html
+++ b/ptu5_autoservice/autoservice/templates/autoservice/base.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        {% comment %} meniukas {% endcomment %}
+        {% comment %} MENIU laukas{% endcomment %}
         <div class="container">
             {% block nav %}
                 <a href="{% url 'index' %}">Home</a>
@@ -20,11 +20,12 @@
                 {% if user.is_authenticated %}
                     <span>{{ user }}</span>
                     <a href="{% url 'user_orders' %}">My orders</a>
-                    {% if user.is_superuser or user.is_staff %}
-                    <a href="{% url 'admin:index' %}">Admin</a>
-                    {% endif %}
+                        {% if user.is_superuser or user.is_staff %}
+                            <a href="{% url 'admin:index' %}">Admin</a>
+                        {% endif %}
                     <a href="{% url 'logout' %}">Logout</a>
                 {% else %}
+                    <a href="{% url 'register' %}">Register</a>
                     <a href="{% url 'login' %}{% if not 'accounts/' in request.path %}?next={{ request.path }}{% endif %}">Login</a>
                 {% endif %}
             {% endblock nav %}
@@ -32,6 +33,11 @@
     </header>
     <main>
         <div class="container">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tag }}">{{ message }}</div>
+                {% endfor %}
+            {% endif %}
             {% block content %}
             {% endblock content %}
         </div>
