--- a/ptu5_autoservice/autoservice/static/autoservice/css/base.css
+++ b/ptu5_autoservice/autoservice/static/autoservice/css/base.css
@@ -159,6 +159,12 @@ table {
     padding: 0.5rem;
 }
 
+.form-grid input[type="text"], 
+.form-grid input[type="email"], 
+.form-grid input[type="password"] {
+    width: 90%;
+}
+
 .center {
     text-align: center;
 }
@@ -171,6 +177,13 @@ table {
     display: block;
     padding: 0.5rem 1rem;
     margin: 0;
+}
+
+.book-review h4 img {
+    max-height: 1.5rem;
+    float: left;
+    margin-right: 0.5rem;
+    border-radius: 0.5rem;
 }
 
 .review-form label {
@@ -203,4 +216,36 @@ table {
     background-color: rgb(173, 241, 166);
     color: rgb(18, 73, 9);
     border-color: rgb(3, 66, 3);
+}
+
+.review-form label {
+    display: none;
+}
+
+.review-form {
+    background-color: rgba(173, 122, 92, 0.3);
+    border-bottom: 3px solid red;
+}
+
+.user-profile-photo {
+    max-width: 20rem;
+    border-radius: 5rem;
+}
+
+.flex-profile {
+    display: flex;
+    place-items: stretch stretch;
+}
+
+.button {
+    background-color: #ccc;
+    color: #000;
+    text-decoration: none;
+    border: 1px solid #999;
+    border-radius: 0.25rem;
+    padding: 0.25rem;
+}
+
+.button:hover {
+    background-color: #ddd;
 }
