--- a/ptu5_autoservice/autoservice/templates/autoservice/base.html
+++ b/ptu5_autoservice/autoservice/templates/autoservice/base.html
@@ -18,8 +18,8 @@
                 <a href="{% url 'orders' %}">Orders</a>
                 <span class="spacer"></span>
                 {% if user.is_authenticated %}
-                    <span>{{ user }}</span>
-                    <a href="{% url 'user_orders' %}">My orders</a>
+                <a href="{% url 'profile' %}">{{ user }}</a>
+                <a href="{% url 'user_orders' %}">My orders</a>
                         {% if user.is_superuser or user.is_staff %}
                             <a href="{% url 'admin:index' %}">Admin</a>
                         {% endif %}
@@ -35,7 +35,7 @@
         <div class="container">
             {% if messages %}
                 {% for message in messages %}
-                    <div class="alert alert-{{ message.tag }}">{{ message }}</div>
+                    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
                 {% endfor %}
             {% endif %}
             {% block content %}
