--- a/ptu5_autoservice/user_profile/templates/user_profile/register.html
+++ b/ptu5_autoservice/user_profile/templates/user_profile/register.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Register autoservice account</h1>
 
-<form action="" method='post'>
+<form action='' method='post'>
     {% csrf_token %}
     <div class="table-grid form-grid">
         <div><label for="username">Username:</label></div>
