create order, delete order

--- a/ptu5_autoservice/autoservice/templates/autoservice/user_order_create.html
+++ b/ptu5_autoservice/autoservice/templates/autoservice/user_order_create.html
@@ -1,5 +1,5 @@
 {% extends 'autoservice/base.html' %}
-{% block tiltle %}Service reservation{{ block.super }}{% endblock tiltle %}
+{% block tiltle %}Reservation in {{ block.super }}{% endblock tiltle %}
 {% block content %}
 <h1>reservattion for service</h1>
 <form action="" method="post">
