--- a/ptu5_autoservice/autoservice/static/autoservice/css/base.css
+++ b/ptu5_autoservice/autoservice/static/autoservice/css/base.css
@@ -196,8 +196,8 @@ table {
 }
 
 .overdue {
-    background-color: #f99;
-    color: red;
+    background-color: rgb(248, 203, 203);
+    color: rgb(229, 23, 23);
     font-weight: bold;
 }
 
