--- a/ptu5_autoservice/autoservice/templates/autoservice/user_order_create.html
+++ b/ptu5_autoservice/autoservice/templates/autoservice/user_order_create.html
@@ -1,7 +1,7 @@
 {% extends 'autoservice/base.html' %}
 {% block tiltle %}Reservation in {{ block.super }}{% endblock tiltle %}
 {% block content %}
-<h1>reservattion for service</h1>
+<h1>New car reservation</h1>
 <form action="" method="post">
     {% if order_instance %}
         <p>{{ order_instance.order }}</p>
