--- a/ptu5_autoservice/autoservice/templates/autoservice/user_order_delete.html
+++ b/ptu5_autoservice/autoservice/templates/autoservice/user_order_delete.html
@@ -1,10 +1,10 @@
 {% extends 'autoservice/base.html' %}
 {% block title %}Cancellation from {{ block.super }}{% endblock title %}
 {% block content %}
-<h1>{% if object.status == 'n' %}Cancel order{% else %}Please pay for your order{% endif %}</h1>
+<h1>Cancel order</h1>
 <form method="post" action="">
     {% csrf_token %}
-    <p>do you want to cancel {% if object.status == 'n' %} order{% else%} pay yor order{% endif %}{{ object.book.title }}?</p>
+    <p>Do you want to cancel?</p>
     <p>
         <button type="submit" class="button">YES</button>
         <a href="{% url 'user_orders' %}" class="button">NO</a>
