web site Translation; English  - Lithuanian

--- a/ptu5_autoservice/autoservice/templates/autoservice/car_detail.html
+++ b/ptu5_autoservice/autoservice/templates/autoservice/car_detail.html
@@ -1,8 +1,9 @@
 {% extends 'autoservice/base.html' %}
+{% load i18n %}
 {% block title %}{{ object }} in {{ block.super }}{% endblock title %}
 {% block content %}
 <h1>{{ object.car_model }}</h1>
-<p>Client: {{ object.client }}</p>
-<p>Plate: {{ object.plate }}</p>
-<p>VIN number: {{ object.vin }}</p>
+<p>{% trans "Client" %}: {{ object.client }}</p>
+<p>{% trans "Plate" %}: {{ object.plate }}</p>
+<p>{% trans "VIN number" %}: {{ object.vin }}</p>
 {% endblock content %}
