--- a/ptu5_autoservice/autoservice/templates/autoservice/base.html
+++ b/ptu5_autoservice/autoservice/templates/autoservice/base.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-{% load static %}
-<html lang="en">
-<head>
+{% load static i18n %}
+{% get_current_language as LANGUAGE_CODE %}
+{% get_available_languages as LANGUAGES %}
+<html lang="{{ LANGUAGE_CODE }}"><head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,21 +14,32 @@
         {% comment %} MENIU laukas{% endcomment %}
         <div class="container">
             {% block nav %}
-                <a href="{% url 'index' %}">Home</a>
-                <a href="{% url 'cars' %}">Cars</a>
-                <a href="{% url 'orders' %}">Orders</a>
+                <a href="{% url 'index' %}">{% trans "Home" %}</a>
+                <a href="{% url 'cars' %}">{% trans "Cars" %}</a>
+                <a href="{% url 'orders' %}">{% trans "Orders" %}</a>
                 <span class="spacer"></span>
                 {% if user.is_authenticated %}
                 <a href="{% url 'profile' %}">{{ user }}</a>
-                <a href="{% url 'user_orders' %}">My orders</a>
+                <a href="{% url 'user_orders' %}">{% trans "My orders" %}</a>
                         {% if user.is_superuser or user.is_staff %}
-                            <a href="{% url 'admin:index' %}">Admin</a>
+                            <a href="{% url 'admin:index' %}">{% trans "Admin" %}</a>
                         {% endif %}
-                    <a href="{% url 'logout' %}">Logout</a>
+                    <a href="{% url 'logout' %}">{% trans "Logout" %}</a>
                 {% else %}
-                    <a href="{% url 'register' %}">Register</a>
-                    <a href="{% url 'login' %}{% if not 'accounts/' in request.path %}?next={{ request.path }}{% endif %}">Login</a>
+                    <a href="{% url 'register' %}">{% trans "Register" %}</a>
+                    <a href="{% url 'login' %}{% if not 'accounts/' in request.path %}?next={{ request.path }}{% endif %}">{% trans "Login" %}</a>
                 {% endif %}
+                <span>
+                    <form action="{% url 'set_language' %}" method="post">
+                        {% csrf_token %}
+                        <input action="text" type="hidden" value="{{ request.path }}">
+                        <select name="language" onchange="this.form.submit()">
+                            {% for lang in LANGUAGES %}
+                                <option value="{{ lang.0 }}" {% if lang.0 == LANGUAGE_CODE %} selected{% endif %}>{{ lang.1}}</option>
+                            {% endfor %}
+                        </select>
+                    </form>
+                </span>
             {% endblock nav %}
         </div>
     </header>
