--- a/ptu5_autoservice/autoservice/templates/autoservice/car_list.html
+++ b/ptu5_autoservice/autoservice/templates/autoservice/car_list.html
@@ -1,8 +1,8 @@
 {% extends 'autoservice/base.html' %}
-{% load static %}
-{% block title %}Cars in {{ block.super }}{% endblock title %}
+{% load static i18n %}
+{% block title %}{% trans "Cars in" %} {{ block.super }}{% endblock title %}
 {% block content %}
-    <h1>Cars list</h1>
+    <h1>{% trans "Cars list" %}</h1>
         {% with car_list as page_obj %}
             {% include 'autoservice/includes/paginator_search.html' %}
         {% endwith %}
