--- a/ptu5_autoservice/user_profile/templates/user_profile/update_profile.html
+++ b/ptu5_autoservice/user_profile/templates/user_profile/update_profile.html
@@ -1,7 +1,8 @@
 {% extends 'autoservice/base.html' %}
-{% block title %}Updating {{ block.super }} User Profile{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Updating User Profile" %} {{ block.super }} {% endblock title %}
 {% block content %}
-<h1>Updating User Profile</h1>
+<h1>{% trans "Updating User Profile" %}</h1>
 <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ user_form.errors }}
@@ -16,6 +17,6 @@
         <div>{{ profile_form.photo.label }}</div>
         <div>{{ profile_form.photo }}</div>
     </div>
-    <p><button type="submit">Update</button></p>
+    <p><button type="submit">{% trans "Update" %}</button></p>
 </form>
 {% endblock content %}
