--- a/ptu5_autoservice/autoservice/templates/autoservice/base.html
+++ b/ptu5_autoservice/autoservice/templates/autoservice/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %} Autoservice{% endblock title %}</title>
+    <title>{% block title %} {% trans "Autoservice" %}{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'autoservice/css/base.css' %}">
 </head>
 <body>
