--- a/ptu5_autoservice/autoservice/templates/autoservice/user_order_list.html
+++ b/ptu5_autoservice/autoservice/templates/autoservice/user_order_list.html
@@ -1,26 +1,27 @@
 {% extends 'autoservice/base.html' %}
-{% block title %}My order in {{block.super}}{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "My order in" %}  {{block.super}}{% endblock title %}
 {% block content %}
-<h1>My orders</h1>
-<p><a class="button" href="{% url 'user_order_create' %}">Make new order</a></p>
+<h1>{% trans "My orders" %}</h1>
+<p><a class="button" href="{% url 'user_order_create' %}">{% trans "Make new order" %}</a></p>
 <div class="table-grid my-order-table">
     {% comment %} <p><a href="{% url 'order' order.pk %}"></p> {% endcomment %}
-    <div class="table-grid-cell center dark">Order date</div>
-    <div class="table-grid-cell center dark">Car</div>
-    <div class="table-grid-cell center dark">Due date</div>
-    <div class="table-grid-cell center dark">Status</div>
-    <div class="table-grid-cell center dark">Action</div>
+    <div class="table-grid-cell center dark">{% trans "Car - Licence plate - Owner" %}</div>
+    <div class="table-grid-cell center dark">{% trans "Order date" %}</div>
+    <div class="table-grid-cell center dark">{% trans "Due date" %}</div>
+    <div class="table-grid-cell center dark">{% trans "Status" %}</div>
+    <div class="table-grid-cell center dark">{% trans "Action" %}</div>
     {% for order in order_list %}
-        <div class="table-grid-cell">{{ order.date }}</div>
         <div class="table-grid-cell">{{ order.car }}</div>
+        <div class="table-grid-cell">{{ order.date }}</div>
         <div class="table-grid-cell center{% if order.is_expired_date %} overdue{% endif %}">{{ order.estimate_date }}</div>
         <div class="table-grid-cell center{% if order.is_expired_date %} overdue{% endif %}">{{ order.get_status_display }}</div>
         <div class="table-grid-cell center">
             {% if order.status == 'n' %}
-                <a class="button" href="{% url 'user_order_delete' order.pk %}">Cancel</a>
-                <a class="button" href="{% url 'user_order_update' order.pk  %}">Update</a>
+                <a class="button" href="{% url 'user_order_delete' order.pk %}">{% trans "Cancel" %}</a>
+                <a class="button" href="{% url 'user_order_update' order.pk  %}">{% trans "Update" %}</a>
             {% elif order.status == 'p' %} 
-            <a>no action</a>
+            <a>{% trans "no action" %}</a>
 
             {% endif %}
         </div>
