--- a/ptu5_autoservice/user_profile/templates/registration/login.html
+++ b/ptu5_autoservice/user_profile/templates/registration/login.html
@@ -1,15 +1,16 @@
 {% extends 'autoservice/base.html' %}
-{% block title %}Login to {{ block.super }}{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Login to" %} {{ block.super }}{% endblock title %}
 {% block content %}
-<h1>Login to autoservice</h1>
+<h1>{% trans "Login to autoservice" %}</h1>
 
 {% if form.errors %}
-    <p class="form-error">Login error, please try again.</p>
+    <p class="form-error">{% trans "Login error, please try again" %}</p>
 {% endif %}
 
 {% if next %}
     {% if user.is_authenticated %}
-        <p class="form-error">Permission error. You need a permission to see this page.</p>
+        <p class="form-error">{% trans "Permission error. You need a permission to see this page" %}</p>
     {% endif %}
 {% endif %}
 
@@ -17,11 +18,11 @@
 {% csrf_token %}
 <table>
     <tr>
-        <td>Username: </td>
+        <td>{% trans "Username" %}: </td>
         <td>{{ form.username }}</td>
     </tr>
     <tr>
-        <td>Password: </td>
+        <td>{% trans "Password" %}: </td>
         <td>{{ form.password }}</td>
     </tr>
     <tr>
@@ -33,6 +34,6 @@
     </tr>
 </table>
 </form>
-<p><a href="{% url 'password_reset' %}">Forgot password?</a></p>
+<p><a href="{% url 'password_reset' %}">{% trans "Forgot password" %}?</a></p>
 
 {% endblock content %}
