--- a/ptu5_autoservice/user_profile/templates/registration/password_reset_form.html
+++ b/ptu5_autoservice/user_profile/templates/registration/password_reset_form.html
@@ -1,14 +1,15 @@
 {% extends 'autoservice/base.html' %}
-{% block title %}Forgot {{ block.super }}{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Password Reset" %} {{ block.super }}{% endblock title %}
 {% block content %}
-<h1>Password Reset Requist</h1>
+<h1>{% trans "Password Reset Request" %}</h1>
 <form action="" method="post">
     {% csrf_token %}
     {% if form.email.errors %}
         {{ form.email.errors }}
     {% endif %}
     {{ form.as_p }}
-    <button type="submit">Reset</button>
+    <p><button type="submit">{% trans "Reset" %}</button></p>
 </form>
 
 {% endblock content %}
