--- a/ptu5_autoservice/user_profile/templates/user_profile/register.html
+++ b/ptu5_autoservice/user_profile/templates/user_profile/register.html
@@ -1,23 +1,24 @@
 {% extends 'autoservice/base.html' %}
-{% block title %}Register {{ block.super }} account{% endblock title %}
+{% load i18n %}
+{% block title %}{% trans "Register" %} {{ block.super }} account{% endblock title %}
 {% block content %}
-<h1>Register autoservice account</h1>
+<h1>{% trans "Register autoservice account" %}</h1>
 
 <form action='' method='post'>
     {% csrf_token %}
     <div class="table-grid form-grid">
-        <div><label for="username">Username:</label></div>
+        <div><label for="username">{% trans "Username" %}:</label></div>
         <div><input type="text" name="username" value="{{ request.POST.username }}"></div>
-        <div><label for="email">Email:</label></div>
+        <div><label for="email">{% trans "Email" %}:</label></div>
         <div><input type="text" name="email" value="{{ request.POST.email }}"></div>    
-        <div><label for="password">Password:</label></div>
+        <div><label for="password">{% trans "Password" %}:</label></div>
         <div><input type="password" name="password"></div>
-        <div><label for="password">Repeat password:</label></div>
+        <div><label for="password">{% trans "Repeat password" %}:</label></div>
         <div><input type="password" name="password2"></div>
         <div></div>
-        <div><button type="submit">Register</button></div>
+        <div><button type="submit">{% trans "Register" %}</button></div>
     </div>
 </form>
-<p>Please log in <a href="{% url 'login' %}">here<a/> if you have an account</p>
+<p>{% trans "Please log in" %} <a href="{% url 'login' %}">{% trans "here" %}<a/> {% trans "if you have an account" %}</p>
 
 {% endblock content %}
